--- a/RentalApp.Application/RentalApp.Application.csproj
+++ b/RentalApp.Application/RentalApp.Application.csproj
@@ -19,4 +19,8 @@
     <ProjectReference Include="..\RentalApp.Domain\RentalApp.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Features\ApartmentFeatures\UpdateApartment\" />
+  </ItemGroup>
+
 </Project>
