--- a/RentalApp.Infrastructure/RentalApp.Infrastructure.csproj
+++ b/RentalApp.Infrastructure/RentalApp.Infrastructure.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+	<OutputType>Library</OutputType>
   </PropertyGroup>
 
   <ItemGroup>
@@ -12,8 +13,8 @@
   </ItemGroup>
 
   <ItemGroup>
+	<ProjectReference Include="..\RentalApp.Domain\RentalApp.Domain.csproj" />
     <ProjectReference Include="..\RentalApp.Application\RentalApp.Application.csproj" />
-    <ProjectReference Include="..\RentalApp.Domain\RentalApp.Domain.csproj" />
   </ItemGroup>
 
 </Project>
